--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,36 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>dupe</groupId>
-    <artifactId>dedupe</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <artifactId>dupededupe</artifactId>
+    <version>1.0</version>
+<build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.3</version>
+            <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+                <finalName>dupededupe</finalName>
+                <appendAssemblyId>false</appendAssemblyId>
+                <archive>
+                    <manifest>
+                        <mainClass>Main</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>build-jar-with-dependencies</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
 
 </project>
